# projection-math

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
projection_math/: __init__.py
projection_math.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projection_math/clustering_sources/: methods.py
projection_math/compare_universes/: methods.py
scripts/: clustering_sources.py  compare_universes.py  download_embedding.py  import unittest.py
src/projection_math/: __init__.py
tests/: test_compare_universes.py  test_functions.py
