[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projection-math"          # what people will `pip install`
version = "0.1.0"
description = "Mathematical calculations for semantic projections"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Roger Arnau", email = "ararnnot@posgrado.upv.es"}]
license = {text = "MIT"}
dependencies = [
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/ararnnot/projection-math"
