[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projection-math"         
version = "0.1.0"
description = "Mathematical calculations for semantic projections"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Roger Arnau", email = "ararnnot@posgrado.upv.es"}]
license = {text = "MIT"}
dependencies = [
    'numpy',
    'pandas',
    'gensim',
    'scikit-learn',
    'scikit-learn-extra'
]

[project.optional-dependencies]
dev = [
    'unittest'
]

[project.urls]
Homepage = "https://github.com/ararnnot/projection-math"
